--- a/res/css/style.css
+++ b/res/css/style.css
@@ -7,7 +7,7 @@
 }
 
 body {
-  background-color: #0a192f;
+  background-color: lightgrey  ;
 }
 
 #containernav {
@@ -19,7 +19,7 @@ body {
   font-size: 14px;
   margin: 2em;
   padding: 1rem 0;
-  border-bottom: 1px solid #99edc3;
+  border-bottom: 1px solid black;
   transition: 1s;
    user-select: none;
 }
@@ -36,7 +36,7 @@ body {
 }
 
 .boxnav a:hover {
-  color: #99edc3;
+  color: grey;
   transition: 0.5s;
 }
 
@@ -47,12 +47,12 @@ body {
 }
 
 a:visited {
-  color: gray;
+  color: black;
 }
 
 a:link {
   text-decoration: none;
-  color: gray;
+  color: black;
 }
 
 #containerwel {
@@ -101,7 +101,7 @@ a:link {
 
 .boxcon {
   padding: 1em;
-  /*border: 1px solid #99EDC3;*/
+  /*border: 1px solid black;*/
   border-radius: 1em;
   width: 750px;
   height: 200px;
@@ -111,7 +111,7 @@ a:link {
 .boxcon2 {
   width: 100%;
   height: 300px;
-  /* border: 1px solid #99EDC3;*/
+  /* border: 1px solid black;*/
   padding: 1em;
   margin: 1em;
 }
@@ -146,68 +146,68 @@ a:link {
 }
 
 .boxcon2:first-child {
-  border-right: 1px solid #99edc3;
+  border-right: 1px solid black;
 }
 
 /*.boxcon:first-child {
-  color: #99edc3;
+  color: black;
 }*/
 
 .boxexp:first-child {
-  border-right: 1px solid #99edc3;
+  border-right: 1px solid black;
 }
 
 .boxwor a:hover{
-  color: #99edc3;
+  color: black;
   transition: 0.4s;
 }
 
 .boxwor:first-child{
-border-right: 1px solid #99edc3;
+border-right: 1px solid black;
 }
 
 .boxcont:first-child{
-  border-right: 1px solid #99edc3;
+  border-right: 1px solid black;
 }
 
 span {
-  color: #99edc3;
+  color: black;
   font-family: "Overpass Mono", monospace;
   font-size: 14px;
 }
 
 .span01 {
-  color: #99edc3;
+  color: black;
   font-family: "Overpass Mono", monospace;
   font-size: 15px;
 }
 
 .numbersheadline {
-  color: white;
+  color: black;
   font-family: "Roboto Slab", serif;
   font-size: 20px;
 }
 
 .headline {
-  color: #99edc3;
+  color: black;
   font-family: "Overpass Mono", monospace;
   display: inline-flex;
 }
 
 .white {
-  color: white;
+  color: black;
   font-size: 60px;
   font-family: "Roboto Slab", serif;
 }
 
 .gray {
-  color: rgb(109, 118, 128);
+  color: black;
   font-size: 60px;
   font-family: "Roboto Slab", serif;
 }
 
 .intro {
-  color: rgb(109, 118, 128);
+  color: black;
   font-size: 15px;
   font-family: "Roboto Slab", serif;
 }
@@ -219,11 +219,11 @@ p {
 #containerfoot {
   display: flex;
   flex-direction: row;
-  border: 1px solid #99edc3;
+  border: 1px solid black;
   height: 100px;
   width: 100%;
   font-family: "Roboto Slab", serif;
-  color: white;
+  color:black;
 }
 
 @media (max-width: 530px) {
@@ -263,7 +263,7 @@ p {
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background: #99edc3;
+  background: black;
 }
 
 .kostel {
@@ -281,7 +281,7 @@ p {
   width: 100%;
   height: 100%;
   user-select: none;
-  background-image: url(../img/kostel.JPG);
+  background-image: url(../img/kostel.jfif);
   background-position: center;
   background-size: cover;
   background-repeat: repeat;
@@ -292,7 +292,7 @@ p {
   width: 100%;
   height: 100%;
   user-select: none;
-  background-image: url(../img/letadlo.JPG);
+  background-image: url(../img/letadlo.jfif);
   background-position: center;
   background-size: cover;
   background-repeat: repeat;
