--- a/res/css/style.css
+++ b/res/css/style.css
@@ -281,7 +281,7 @@ p {
   width: 100%;
   height: 100%;
   user-select: none;
-  background-image: url(../img/kostel.jfif);
+  background-image: url(../img/kostel.JPG);
   background-position: center;
   background-size: cover;
   background-repeat: repeat;
@@ -292,7 +292,7 @@ p {
   width: 100%;
   height: 100%;
   user-select: none;
-  background-image: url(../img/letadlo.jfif);
+  background-image: url(../img/letadlo.JPG);
   background-position: center;
   background-size: cover;
   background-repeat: repeat;
